--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -2,8 +2,10 @@
   "routes": [
     {
       "route": "/api/*",
-      "allowedRoles": ["anonymous"],
-      "rewrite": "https://test2.whitelisland-5a5af531.centralindia.azurecontainerapps.io/api/*"
+      "redirect": "https://test2.whitelisland-5a5af531.centralindia.azurecontainerapps.io/api/*",
+      "allowedRoles": [
+        "anonymous"
+      ]
     }
   ]
 }
