Update static web app route configuration

--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -1,7 +1,7 @@
 {
   "routes": [
     {
-      "route": "/api/*",
+      "route": "/api2/*",
       "rewrite": "https://postman-echo.com/get",
       "allowedRoles": [
         "anonymous"
